--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@rocketseat/eslint-config": "2.1.0",
     "@types/node": "20.8.9",
     "eslint": "8.52.0",
+    "prisma": "5.6.0",
     "tsup": "7.2.0",
     "tsx": "3.14.0",
     "typescript": "5.2.2"
   },
   "dependencies": {
+    "@prisma/client": "5.6.0",
     "dotenv": "16.3.1",
     "fastify": "4.24.3",
     "zod": "3.22.4"
