--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "node build/server.js",
     "test": "vitest run",
     "test:watch": "vitest",
-    "lint": "eslint src --ext .ts --fix"
+    "lint": "eslint src --ext .ts --fix",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
     "@rocketseat/eslint-config": "2.1.0",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.8.9",
+    "@vitest/coverage-v8": "0.34.6",
     "eslint": "8.52.0",
     "prisma": "5.6.0",
     "tsup": "7.2.0",
