--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "lint": "eslint src --ext .ts --fix",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest run --dir src/use-cases",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest --dir src/http",
+    "test:e2e:watch": "vitest run --dir src/http"
+
   },
   "keywords": [],
   "author": "",
@@ -20,9 +26,12 @@
     "@rocketseat/eslint-config": "2.1.0",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.8.9",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "0.34.6",
     "eslint": "8.52.0",
+    "npm-run-all": "4.1.5",
     "prisma": "5.6.0",
+    "supertest": "6.3.3",
     "tsup": "7.2.0",
     "tsx": "3.14.0",
     "typescript": "5.2.2",
