--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest --dir src/http",
     "test:e2e:watch": "vitest run --dir src/http"
-
   },
   "keywords": [],
   "author": "",
@@ -39,6 +38,7 @@
     "vitest": "0.34.6"
   },
   "dependencies": {
+    "@fastify/cookie": "9.2.0",
     "@fastify/jwt": "7.2.4",
     "@prisma/client": "5.6.0",
     "bcryptjs": "2.4.3",
